# HistoMap

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst  modules.rst
docs/installation/: index.rst
docs/notebooks/: 0_Input_and_QuPath_annotation.ipynb  1_Tissue_detection_HD.ipynb  README.txt
docs/static/: custom.css
docs/tutorials/: index copy.rst  index.rst
histomaptx/: __init__.py  distances.py  histomap_object.py  histomap_utils.py  visualization.py
