[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histomaptx"
version = "0.1.2"
description = "A Python library for analyzing histological annotations alongside spatial transcriptomics data"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = "MIT"

keywords = ["spatial transcriptomics", "histology", "annotations", "visium"]
dependencies = [
    "setuptools",
    "geopandas",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib<3.9",
    "seaborn",
    "scipy",
    "shapely",
    "rtree",
    "scanpy>=1.9,<1.11",
    "statsmodels",
    "rasterio",
    "tifffile",
    "spatialdata",
    "spatialdata-io",
    "spatialdata-plot",
    "plotly"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/must-bioinfo/HistoMap"
Documentation = "https://histomaptx.readthedocs.io"
Repository = "https://github.com/must-bioinfo/HistoMap"

[tool.setuptools]
packages = ["histomaptx"]  
