[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histomaptx"
version = "0.1.6"
description = "A Python library for analyzing histological annotations alongside spatial transcriptomics data"
readme = "README.md"
authors = [
    {name = "Hugo Croizer", email = "hugo.croizer@u-paris.fr"},
]
license = "MIT"

keywords = ["spatial transcriptomics", "histology", "annotations", "visium"]
dependencies = [
    "setuptools",
    "geopandas",
    "seaborn",
    "rasterio",
    "spatialdata",
    "spatialdata-plot"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/must-bioinfo/HistoMap"
Documentation = "https://histomaptx.readthedocs.io"
Repository = "https://github.com/must-bioinfo/HistoMap"

[tool.setuptools]
packages = ["histomaptx"]  
